# HellSearchEngine

./: CMakeLists.txt  README.md  answers.json  config.json  main.cpp  requests.json
include/: Base.h  ConverterJSON.h  Creator.h  InvertedIndex.h  SearchServer.h  ThreadPool.h
resources/: doc0.docx  file0.txt  file1.txt  file2.txt  file3.txt  file4.txt
src/: Base.cpp  ConverterJSON.cpp  Creator.cpp  InvertedIndex.cpp  SearchServer.cpp
tests/: CMakeLists.txt  InvertedIndex_test.cpp  SearchServer_test.cpp  test.cpp
